public/css/4-sections/_home.sass
.home-view
	height: 100%
	background: fade-out($light-black, .03)
	color: white
	display: flex
	flex-direction: column
	align-items: center
	// justify-content: center


.home-logo
	padding: 1rem 1.8rem 5rem

.button-wrap
	display: flex
	justify-content: center
	
.footer
	margin-top: 85px

	li
		padding-top: 5px
	
.b1
	width: 300px
	height: 65px
	color: #B8B8B8 
	background-color: fade-out($light-black, .03)

